kubernetes/apps/rabbitmq/expose-rabbitmq-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbitmq-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: tcp-rmq
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-vs
  namespace: rabbitmq
spec:
  hosts:
  - "*"
  gateways:
  - rabbitmq-gateway.istio-system
  http:
  - match:
    # - port: 80
    - method:
        exact: GET
      uri:
        prefix: /rabbitmq/dashboard
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      authority: rabbitmq.rabbitmq.svc.cluster.local
      uri: /
    route:
    - destination:
        host: rabbitmq
        port:
          number: 15672
  - match:
    # - port: 80
    - uri:
        prefix: /rabbitmq/amqp
    rewrite:
      # Rewrite the original host header to the host header of Search service
      # in order to redirect requests to Search service.
      # authority: grafana.knative-monitoring.svc.cluster.local
      uri: /
    route:
    - destination:
        host: rabbitmq
        port:
          number: 5672
---
